--- a/scaffolder-templates/create-react-app/template.yaml
+++ b/scaffolder-templates/create-react-app/template.yaml
@@ -10,6 +10,7 @@ metadata:
 spec:
   owner: web@example.com
   type: website
+  scaffoldedFrom: 'test-template'
   parameters:
     - title: Provide some simple information
       required:
