--- a/scaffolder-templates/create-react-app/template.yaml
+++ b/scaffolder-templates/create-react-app/template.yaml
@@ -8,6 +8,7 @@ metadata:
     - react
     - cra
 spec:
+  scaffoldedFrom: create-react-app-template
   owner: web@example.com
   type: website
   parameters:
