--- a/scaffolder-templates/create-react-app/template.yaml
+++ b/scaffolder-templates/create-react-app/template.yaml
@@ -73,6 +73,10 @@ spec:
       input:
         repoContentsUrl: ${{ steps.publish.output.repoContentsUrl }}
         catalogInfoPath: "/catalog-info.yaml"
+        catalogInfo:
+          metadata:
+            annotations:
+              backstage.io/scaffolded-from: default:template/create-react-app-template
 
   output:
     links:
